--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,3 +2,10 @@
   text-align: center;
   list-style: none;
 }
+.error {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+  color: #212122;
+}
